...
        android:id="@+id/card_view_for_description"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_for_description"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"/>
    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
...
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="next"
            android:layout_marginRight="30dp"
            android:id="@+id/next_step"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>
